--- a/ErmitãoK.html
+++ b/ErmitãoK.html
@@ -57,7 +57,7 @@ Não se deixem levar pelas vaidades do mundo, mas sigam seus corações com sabe
 </h3>
 
 
-<li><a href="/Farsa de Inês Pereira.html">Clique para voltar a página inicial</a></li>
+<li><a href="/index.html">Clique para voltar a página inicial</a></li>
 
 
 </body>
