--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
         <img src="/Imagens/ermitao.jpg" alt="Ermitão" class="imagem-com-borda">
         <h1><li>Ermitão</a></li></h1>
       
-
+        <a href="Vozes.html">
+        <img src="/Imagens/ermitao.jpg" alt="Vozes" class="imagem-com-borda">
+        <h1><li>Vozes.html</a></li></h1>
 
 
 
