Update Escudeiro(Brás da Mata)K.html

--- a/Escudeiro(Brás da Mata)K.html
+++ b/Escudeiro(Brás da Mata)K.html
@@ -69,7 +69,7 @@
        Eu vos ensino a dar ponto cruzado.<br>
        Se quereis outras coisas, vosso ledo namorado."</h3>
    
-   <li><a href="Farsa de Inês Pereira.html">Clique para voltar a página inicial</a></li>
+ <li><a href="/index.html">Clique para voltar a página inicial</a></li>
    
    
    </body>
