--- a/Judeus CasamenteirosK.html
+++ b/Judeus CasamenteirosK.html
@@ -65,7 +65,7 @@ incluindo as práticas matrimoniais, a ganância e os estereótipos étnicos.</h
     Sempre podemos dar-vos de conselho<br>
     Por outro, e sem trigo, bem casamento."</h3>
 
-<li><a href="Farsa de Inês Pereira.html">Clique para voltar a página inicial</a></li>
+<li><a href="/index.html">Clique para voltar a página inicial</a></li>
 
 
 
