--- a/Lianor VazK.html
+++ b/Lianor VazK.html
@@ -58,7 +58,7 @@ herdou as coisas do seu Pai.<br></h3>
 
 </h3>
 
-<li><a href="Farsa de Inês Pereira.html">Clique para voltar a página inicial</a></li>
+<li><a href="/index.html">Clique para voltar a página inicial</a></li>
 
 
 
