--- a/MãeK.html
+++ b/MãeK.html
@@ -85,8 +85,6 @@ de Inês de se casar com um burro, que contrasta com as expectativas sociais da 
     </h3>
 
 
-<li><a href="Farsa de Inês Pereira.html">Clique para voltar a página inicial</a></li>
-
-
+<li><a href="/index.html">Clique para voltar a página inicial</a></li>
 </body>
 </html>
