--- a/Pêro MarquesK.html
+++ b/Pêro MarquesK.html
@@ -58,7 +58,7 @@ decorativo e outros acessórios que denotem a sua riqueza e status.</h3>
     Venho até vós com humildade e honestidade, desejando desposar Inês e oferecer-lhe um lar digno de sua nobreza.<br> 
     Embora minhas posses possam não ser grandiosas, prometo-lhe meu respeito, meu afeto e meu empenho em fazê-la feliz."</h3>
 
-<li><a href="Farsa de Inês Pereira.html">Clique para voltar a página inicial</a></li>
+<li><a href="/index.html">Clique para voltar a página inicial</a></li>
 
 
 
