--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 
         <a href="MãeK.html">
-        <img src= "Imagens/mae.jpg"alt="Mãe" class="imagem-com-borda">
+        <img src= "Imagens/Mae.jpg"alt="Mãe" class="imagem-com-borda">
         <h1><li>Mãe</a></li></h1>
 
         <a href="Lianor VazK.html">
